--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
 [build]
-  command = "yarn install && yarn start"
+  command = "npm install && npm run build"
+  functions = "functions"
+
+# [build.environment]
+#   NETLIFY_USE_YARN = true
