--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,6 @@
   command = "npm install && npm run build"
   functions = "functions"
 
-# [build.environment]
-#   NETLIFY_USE_YARN = true
+[build.environment]
+  NODE_VERSION = "14"
+  # NETLIFY_USE_YARN = true
