--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "netlify-express-api",
   "version": "0.1.0",
   "description": "Simple Express REST API to convert torrent file to magnet URI",
-  "main": "functions/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build": "netlify-lambda build src",
+    "build": "npx babel src --out-dir lib && netlify-lambda build src",
     "start": "nodemon --exec babel-node src/index.js",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -13,7 +13,11 @@
     "express.js",
     "torrent2magnet"
   ],
-  "author": "Art Dev artdevjs@gmail.com <https://github.com/dotiful>",
+  "author": "ArtDev <artdevjs@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dotiful/web-template.git"
+  },
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -22,9 +26,11 @@
     "express": "^4.16.4",
     "netlify-lambda": "^2.0.2",
     "serverless-http": "^2.6.0",
-    "torrent2magnet": "^1.0.0"
+    "torrent2magnet": "^1.0.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
